name:               problem1
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable Test
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  hs-Source-Dirs:      ./
  other-modules:       Problem1
  build-depends:       base, QuickCheck, HUnit
   -- ghc-options:         -dynamic
  default-language:    Haskell2010

